stl-test/Tests/coordinate/bounds/Negative/test14.cpp
//#error
#include <coordinate>
int main(void)
{
    std::bounds<2> cord{55, 66};
    auto cord = cord * 1111111111111;
}
